[gd_scene load_steps=11 format=3 uid="uid://drtguo8ski4ig"]

[ext_resource type="PackedScene" uid="uid://evaf4ox1obtl" path="res://componets/Enemy Folder/Bullet Sentry/BulletSentryHead.gltf" id="1_64cgk"]
[ext_resource type="Script" path="res://assets/EnemyAssets/BulletSentry/ClassicBulletSentry.gd" id="1_hhcjm"]
[ext_resource type="Resource" uid="uid://nj6a23nrn624" path="res://componets/bullets/classicbullet/Classic_Bullet_Resource.tres" id="2_cjf0w"]
[ext_resource type="Animation" uid="uid://d7dves1fuvqx" path="res://componets/Enemy Folder/Bullet Sentry/animation_model_SlideReload.res" id="2_ckgaf"]
[ext_resource type="Script" path="res://src/sentry_resource.gd" id="3_u7axc"]
[ext_resource type="ArrayMesh" uid="uid://cvo6sah7eq1ku" path="res://componets/Enemy Folder/Bullet Sentry/BulletSentryBase.obj" id="5_cj0or"]

[sub_resource type="Resource" id="Resource_e1jpf"]
resource_local_to_scene = true
script = ExtResource("3_u7axc")
Health = 200
Mana = 100
Max_Mana = 100
Max_Health = 100
Mana_Inc_Sec = 1
Mana_Timer = 0.15
Barrel_Delay = 0.15

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6v8cb"]
_data = {
"animation_model_SlideReload": ExtResource("2_ckgaf")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_ltih8"]
radius = 8.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qyblh"]
height = 1.338

[node name="ClasicBulletSentry" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_hhcjm")
Bullet_Info = ExtResource("2_cjf0w")
SentryInfo = SubResource("Resource_e1jpf")

[node name="SentryHead" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.014075, 0.995703, 0.011834)

[node name="BulletSentryHead" parent="SentryHead" instance=ExtResource("1_64cgk")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.646106, 0)

[node name="ReloadAnimation" type="AnimationPlayer" parent="SentryHead/BulletSentryHead"]
libraries = {
"BulletTurret": SubResource("AnimationLibrary_6v8cb")
}
movie_quit_on_finish = true

[node name="RayCast3D" type="RayCast3D" parent="SentryHead"]
transform = Transform3D(1.52855e-14, 3.49691e-07, 8, 8, -3.49691e-07, 1.96512e-20, 3.49691e-07, 8, -3.49691e-07, 0, 0, 0)
collision_mask = 2

[node name="BulletSpawnPoint" type="Node3D" parent="SentryHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0091126, -0.84364)

[node name="BODY-REPLACEME" type="Node3D" parent="."]

[node name="BulletSentryBase" type="MeshInstance3D" parent="BODY-REPLACEME"]
mesh = ExtResource("5_cj0or")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="BODY-REPLACEME"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01346, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="BODY-REPLACEME/Area3D"]
shape = SubResource("SphereShape3D_ltih8")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DetectionEyes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="LineOfSight" type="RayCast3D" parent="DetectionEyes"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -8, 0)
collision_mask = 3

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.716766, 0)
shape = SubResource("CylinderShape3D_qyblh")

[connection signal="body_entered" from="BODY-REPLACEME/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="BODY-REPLACEME/Area3D" to="." method="_on_area_3d_body_exited"]
